@@ -6,6 +6,7 @@ Version 0.17.0
   Modified firmware version display to support VLCB patch number, not beta
   check node exists in layout before adding backup list
   corrected LIST_OF_BACKUPS_FOR_ALL_NODES
+  Now ignores CAN_SW nodes on FCU import
 
 Version 0.16.0
   added getListOfTokens & extractMDFTokens
